// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly if there is just one expense 1`] = `
<div>
  <h3>
    1
     
    expense
     totaling
     
    $99.99
  </h3>
</div>
`;

exports[`should render ExpenseSummary correctly if there is multiple expenses 1`] = `
<div>
  <h3>
    3
     
    expenses
     totaling
     
    $499.99
  </h3>
</div>
`;
